Add WMAP9.  Bump version to 1.6.14

--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 See INSTALL for installation instructions,
-and qold.astro.utoronto.ca/conley/simple_cosfitter
+and casa.colorado.edu/~aaconley/simple_cosfitter
 for updates.
 
 This is distributed under the GSL.
-If you use this in a paper, I would appreciate
-an acknowledgement.  However, there are currently
-no papers to cite.
+If you use this in a paper, the correct
+citation is Conley et al. 2011.
